Add link to github

--- a/themes/vex-hugo/layouts/partials/footer.html
+++ b/themes/vex-hugo/layouts/partials/footer.html
@@ -6,7 +6,7 @@
           <a href="{{ .Site.BaseURL }}" class="footer-logo mb-4">{{ if .Site.Params.logo }} <img src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"> {{ else }} {{ .Title }} {{ end }}</a>
           <ul class="list-inline footer-menu">
             <li class="list-inline-item">
-              <a href="{{ .Site.BaseURL }}">{{ .Site.Params.home }}</a>
+              <a href="https://github.com/popey/makealinux.app">GitHub</a>
             </li>
             {{ range .Site.Menus.main }}
             <li class="list-inline-item">
