Add packaging info (not sure about this

--- a/themes/vex-hugo/layouts/index.html
+++ b/themes/vex-hugo/layouts/index.html
@@ -6,10 +6,13 @@
 
   {{- partial "promo.html" . }}
 
-  {{- partial "testimonials.html" . }}
-
   {{- partial "feature-list.html" . }}
 
+  {{- partial "testimonials.html" . }}
+
   {{- partial "call-to-action.html" . }}
+
+  {{- partial "feature-list2.html" . }}
+
 
 {{ end }}
